Make headings top level

--- a/README.org
+++ b/README.org
@@ -4,25 +4,25 @@ Read about switching from Vim to Emacs in my blog post, [[http://www.bryangarza.
 
 * Table of Contents                                                :TOC_2_gh:
  - [[#important][Important!]]
-     - [[#paredit][Paredit]]
-     - [[#org-mode][Org mode]]
-     - [[#org-present][Org-present]]
-     - [[#hydras][Hydras]]
-     - [[#zooming][Zooming]]
-     - [[#unbinding][Unbinding]]
-     - [[#pinning][Pinning]]
-     - [[#helm][Helm]]
-     - [[#circe][Circe]]
-     - [[#aligning-code][Aligning Code]]
-     - [[#editing-with-sudo][Editing with Sudo]]
-     - [[#keybindings][Keybindings]]
-     - [[#updating-submodules][Updating submodules]]
-     - [[#finding-face-under-point][Finding face under point]]
+ - [[#paredit][Paredit]]
+ - [[#org-mode][Org mode]]
+ - [[#org-present][Org-present]]
+ - [[#hydras][Hydras]]
+ - [[#zooming][Zooming]]
+ - [[#unbinding][Unbinding]]
+ - [[#pinning][Pinning]]
+ - [[#helm][Helm]]
+ - [[#circe][Circe]]
+ - [[#aligning-code][Aligning Code]]
+ - [[#editing-with-sudo][Editing with Sudo]]
+ - [[#keybindings][Keybindings]]
+ - [[#updating-submodules][Updating submodules]]
+ - [[#finding-face-under-point][Finding face under point]]
  - [[#here-be-dragons][Here Be Dragons]]
  - [[#when-cloning][When Cloning]]
-     - [[#ocaml][OCaml]]
-     - [[#irc][IRC]]
-     - [[#submodules][Submodules]]
+   - [[#ocaml][OCaml]]
+   - [[#irc][IRC]]
+   - [[#submodules][Submodules]]
  - [[#graphical-vs-console-emacs][Graphical vs Console Emacs]]
  - [[#languages][Languages]]
  - [[#packages-and-modes][Packages and Modes]]
@@ -30,20 +30,16 @@ Read about switching from Vim to Emacs in my blog post, [[http://www.bryangarza.
  - [[#internal-notes][Internal Notes]]
 
 * Important!
-
-** Paredit
-
+* Paredit
 - [[http://www.emacswiki.org/emacs/PareditCheatsheet][Paredit Cheatsheet]]
 - [[http://mumble.net/~campbell/emacs/paredit.html][Another Paredit Cheatsheet]]
 
-** Org mode
-
+* Org mode
 - [[http://orgmode.org/org.html][The Org Manual]]
 - [[http://orgmode.org/guide/][The compact Org-mode Guide]]
 - [[https://emacsclub.github.io/html/org_tutorial.html][Org-mode Tutorial / Cheat Sheet]]
 
-** Org-present
-
+* Org-present
 - left and right for movement
 - =C-c C-== for large text
 - =C-c C--= for small text
@@ -51,24 +47,21 @@ Read about switching from Vim to Emacs in my blog post, [[http://www.bryangarza.
 - =C-c <= to jump to first slide
 - =C-c >= to jump to last slide
 
-** Hydras
-
+* Hydras
 - =C-c m= Hydra for all hydras
 - =C-c w= Window movement and manipulation
 - =C-c c= Multiple cursors
 - =C-c o= Org mode headings
 - =C-c a= Avy
 
-** Zooming
-
+* Zooming
 - =C-x C-+= and =C-x C--= (‘text-scale-adjust’) to increase or
   decrease the buffer text size
 - =C-+= or =C--= to repeat
 - =C-x C-0= to restore the default (global) face height
 - =S-mouse-1= pops up a menu where you can choose these same actions
 
-** Unbinding
-
+* Unbinding
 This will make the symbol my-nasty-variable's value void:
 
 #+BEGIN_SRC emacs-lisp
@@ -81,8 +74,7 @@ This will make the symbol my-nasty-function's function definition void:
 (fmakunbound 'my-nasty-function)
 #+END_SRC
 
-** Pinning
-
+* Pinning
 If I ever want to pin packages:
 
 #+BEGIN_SRC emacs-lisp
@@ -94,57 +86,48 @@ If I ever want to pin packages:
   :pin melpa-stable)
 #+END_SRC
 
-** Helm
-
+* Helm
 - [[http://emacs-helm.github.io/helm/][Helm home page]]
 - [[http://tuhdo.github.io/helm-intro.html][Helm intro]]
 
-** Circe
-
+* Circe
 - [[https://github.com/howardabrams/dot-files/blob/master/emacs-irc.org][Howard Abrams' IRC settings]]
 - [[https://github.com/jorgenschaefer/circe/wiki/Configuration][Circe wiki: Configuration]]
 
-** Aligning Code
-
+* Aligning Code
 [[https://wiki.haskell.org/Emacs/Indentation#Aligning_code][Haskell wiki: aligning code in Emacs]]
 
 #+BEGIN_SRC emacs-lisp
 (bind-key "C-x a r" 'align-regexp)
 #+END_SRC
 
-** Editing with Sudo
-
+* Editing with Sudo
 #+BEGIN_EXAMPLE
 C-x C-f /sudo::/path/to/file
 #+END_EXAMPLE
 
-** Keybindings
-
+* Keybindings
 Most of the keybindings I have set can be found in
 =bryan/bryan-keybindings.el=. The majority involve the Super key,
 which on Mac is the Command key. On Windows or GNU/Linux, this is
 probably your Win key, but if it's not bound, then just bind it!
 
-** Updating submodules
-
+* Updating submodules
 #+BEGIN_SRC sh
 git submodule foreach git pull origin master
 #+END_SRC
 
-** Finding face under point
-
+* Finding face under point
 ~what-cursor-position~ with a prefix argument shows the face under point, among other information.
 
 Keyboard shortcut is =C-u C-x ==.
 
 * Here Be Dragons
-
 This setup is heavily customized, [[http://www.bryangarza.me/contact.html][let me know]] if you run into any problems and
 we can troubleshoot. Though official support is neither offered nor guaranteed,
 I'd like this configuration to be useful to others.
 
 * When Cloning
-
 ** OCaml
 
 OCaml settings require external installation, see
@@ -152,7 +135,6 @@ OCaml settings require external installation, see
 out =bryan-ocaml= in =bryan-pkg-full=.
 
 ** IRC
-
 Create a file =~/.private.el=:
 
 #+BEGIN_SRC emacs-lisp
@@ -167,7 +149,6 @@ not yet figured out how to get it to identify to Nickserv automatically
 yet. Circe does have automatic identify working.
 
 ** Submodules
-
 Remember to also clone *submodules*:
 
 #+BEGIN_SRC sh
@@ -175,7 +156,6 @@ git clone --recursive git@github.com:bryangarza/dot-emacs.git
 #+END_SRC
 
 * Graphical vs Console Emacs
-
 This setup will work much better with *Graphical* Emacs than the terminal-based
 Emacs. This is because the terminal gobbles up various key chords. Not to
 mention graphical Emacs has mouse support, can display multiple font sizes, and
@@ -191,7 +171,6 @@ takes control of the ⌘ key, as well as some other chords. Your experience may
 vary.
 
 * Languages
-
 I've configured it for the following languages:
 - HTML
 - CSS
@@ -216,7 +195,6 @@ Other languages may work out-of-the-box, for example I have not changed any
 settings for Python but the default editing experience is decent as-is.
 
 * Packages and Modes
-
 Notable packages and modes that I use include
 
 - Evil
@@ -227,7 +205,6 @@ Notable packages and modes that I use include
 - Ace Jump
 
 * License
-
 Copyright (C) 2015 Bryan Garza
 
 This program is free software: you can redistribute it and/or modify it under
@@ -243,7 +220,6 @@ You should have received a copy of the GNU General Public License along with
 this program.  If not, see <http://www.gnu.org/licenses/>.
 
 * Internal Notes
-
 Because I keep forgetting the Org mode formatting:
 
 #+BEGIN_EXAMPLE
