--- a/README.org
+++ b/README.org
@@ -163,6 +163,7 @@ All these are set up:
 - Stylus
 
 * Input Methods
+[[http://www.gnu.org/software/emacs/manual/html_node/emacs/Select-Input-Method.html#Select-Input-Method][22.4 Selecting an Input Method]]
 - =C-x RET C-\ method RET= :: ~(set-input-method)~
 - =C-\= :: ~(toggle-input-method)~
 - =C-h I method RET= :: ~(describe-input-method)~
